erro no javascipt.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>salas piso 0</title>
+    <title>Salas Piso 0</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script> 
 </head>
 <body>
     <img src="zero 2.png" usemap="#image-map">
 
     <map name="image-map">
-    <area target="" alt="0.D017" title="0.D017" href="" coords="797,126,908,215" shape="rect">
-    <area target="" alt="0.D018" title="0.D018" href="" coords="1020,214,910,125" shape="rect">
-    <area target="" alt="0.D025" title="0.D025" href="" coords="826,368,1019,568" shape="rect">
-    <area target="" alt="0.D024" title="0.D024" href="" coords="1159,568,1020,443" shape="rect">
+        <area target="" alt="0.D017" title="0.D017" href="#" coords="797,126,908,215" shape="rect" id="D017" data-popup="">
+        <area target="" alt="0.D018" title="0.D018" href="#" coords="1020,214,910,125" shape="rect" id="D018" data-popup="">
+        <area target="" alt="0.D025" title="0.D025" href="#" coords="826,368,1019,568" shape="rect" id="D025" data-popup="">
+        <area target="" alt="0.D024" title="0.D024" href="#" coords="1159,568,1020,443" shape="rect" id="D024" data-popup="">
     </map>
-    <script src="script.js"></script>
-    
 </body>
 </html>
