--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script> 
 </head>
 <body>
-    <img src="zero 2.png" usemap="#image-map">
+    <img src="zero_2-removebg.png" usemap="#image-map">
 
     <map name="image-map">
         <area target="" alt="0.D017" title="0.D017" href="#" coords="797,126,908,215" shape="rect" id="D017" data-popup="">
@@ -18,4 +18,3 @@
     </map>
 </body>
 </html>
-    
